# Regex

./: .gitignore  README  README.md  Regex.cabal  clean.bat  interactive.sh  makefile  perfTest.hs  regex.hs  regexTest.hs
regex/: Regex.cabal  build.sh  regex.cabal
regex-server/: regex-server.cabal
regex-server/src/: Main.hs
regex/src/: Regex.hs  writeDot.hs
regex/src/Regex/: Graphviz.hs  Internal.hs  NFA.hs  Parser.hs  Util.hs
regex/testsuite/tests/: Regex.hs
regex/testsuite/tests/Regex/: Parser.hs
src/: Regex.hs  regexTest.hs
src/Regex/: Graphviz.hs  Internal.hs  Parser.hs  Regex.hs
testsuite/Test/Regex/: Regex.hs
testsuite/tests/: Regex.hs
testsuite/tests/Regex/: Parser.hs  Regex.hs
