name:           Regex
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
Author:		Tom Boettcher
Maintainer:	tboett@gmail.com

library 
  build-depends:    base >= 4, graphviz >= 2999, fgl >= 5.4, mtl >= 2, containers >= 0.4
  hs-source-dirs:   src/Regex
  ghc-options:      -Wall
  exposed-modules:  Regex
