name:           regex
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:		    Tom Boettcher
maintainer:	    tboett@gmail.com
stability:      experimental

library 
  build-depends:    base >= 4,
                    graphviz >= 2999,
                    fgl >= 5.4,
                    mtl >= 2,
                    containers >= 0.4,
                    parsec >= 3.1
  hs-source-dirs:   src
  ghc-options:      -Wall -fno-warn-unused-do-bind -O2
  exposed-modules:  Regex
  other-modules:    Regex.Internal
  
test-suite regexTests
  type:              exitcode-stdio-1.0
  build-depends:     base,
                     Cabal >= 1.9.2,
                     random,
                     test-framework >= 0.2.0,
                     test-framework-quickcheck2 >= 0.2.0,
                     QuickCheck >= 2 && < 3
  hs-source-dirs:    src, testsuite
  main-is:           tests/Regex.hs
  other-modules:     Regex.Internal
  
test-suite parserTests
  type:              exitcode-stdio-1.0
  build-depends:     base,
                     Cabal >= 1.9.2,
                     test-framework >= 0.2,
                     test-framework-hunit >= 0.2,
                     HUnit >= 1.2.0
  hs-source-dirs:    src, testsuite
  main-is:           tests/Regex/Parser.hs
  other-modules:     Regex.Parser
                     Regex.Internal
  
source-repository head
  type:         git
  location:     https://github.com/tboettch/Regex
